--- a/style.css
+++ b/style.css
@@ -1,10 +1,33 @@
 html {
-    background-color: black;
+    background-color: hsl(215, 25%, 25%);
     text-align: center;
     font-size: large;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Roboto Slab", "Times New Roman", serif;
 }
-
 body {
     color: white;
 }
+/* About Section */
+footer {
+    font-size: 12px;
+}
+/* Line above Footer */
+.border {
+    border-top: 5px solid whitesmoke;
+}
+/* Default Link */
+a:link {
+    color: whitesmoke;
+  }
+  /* Visited Link */
+  a:visited {
+    color: goldenrod;
+  }
+  /* Hover Over the Link */
+  a:hover {
+    color: gold;
+  }
+  /* Clicking on the Link */
+  a:active {
+    color: white;
+  }
