--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ html {
     background-color: hsl(215, 25%, 25%);
     text-align: center;
     font-size: 20px;
-    font-family: "Roboto Slab", "Times New Roman", serif;
-    border-left: 100px solid hsl(43, 74%, 48%);
-    border-right: 100px solid hsl(215, 25%, 25%);
+    font-family: "Times New Roman", serif;
+    border-left: 50px solid hsl(43, 74%, 48%);
+    border-right: 50px solid hsl(215, 25%, 25%);
 }
 body {
     color: white;
