--- a/style.css
+++ b/style.css
@@ -33,3 +33,19 @@ a:link {
   a:active {
     color: white;
   }
+
+  #banner {
+    background-image: url("https://i.imgur.com/WUunuLu.jpg?1");
+    background-size: cover;
+    background-position: top center;
+    height: 800px;
+    width: 100%;
+  }
+
+  #banner .content h1 {
+    border: 3px solid white;
+    position: relative;
+    top: 100px;
+    width: 400px;
+    margin: 0 auto;
+  }
