--- a/style.css
+++ b/style.css
@@ -37,7 +37,11 @@ a:link {
     color: white;
   }
 
-  .mytruck {
+  .myTruck {
     width: 100%;
     height: 100%;
+    min-width: 25%;
+    min-height: 25%;
+    max-width: 100%;
+    max-height: 100%;
   }
