--- a/style.css
+++ b/style.css
@@ -1,46 +1,66 @@
 html {
     background-color: hsl(215, 25%, 25%);
-    text-align: center;
     font-size: 16px;
     font-family: "Times New Roman", serif;
-    border-left: 250px solid hsl(43, 74%, 48%);
-    border-right: 250px solid hsl(215, 25%, 25%);
     margin: 0 auto;
+}
+
+/* Navigation Bar */
+nav {
+  width: 75%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  padding: 50px;
 }
 
 body {
     color: white;
     font-size: 1.25rem;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
     }
 
-/* Accent Line above Footer */
-.border {
-    border-top: 5px solid white;    
+.myname {
+  width: 75%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
 }
 
-    /* Footer Section */
+#selfie {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+}
+
+/* Footer Section */
 footer {
   font-size: 0.75rem;
+  width: 75%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  padding: 50px;
 }
 
 /* Link Rules */
 a:link {
     color: white;
+    text-decoration: none;
   }
   a:visited {
     color: hsl(43, 74%, 48%);
+    text-decoration: none;
   }
   a:hover {
     color: gold;
+    text-decoration: none;
   }
   a:active {
     color: white;
-  }
-
-  .myTruck {
-    width: 100%;
-    height: 100%;
-    min-width: 25%;
-    min-height: 25%;
-    max-width: 1385px;
+    text-decoration: none;
   }
