--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ body {
   justify-content: space-around;
   align-items: center;
   padding: 60px;
+  margin-top: 25px;
 }
 
 #selfie {
@@ -46,6 +47,7 @@ body {
   justify-content: space-around;
   padding: 25;
   width: 50%;
+  margin-top: 25px;
 }
 
 .AboutSetup,
@@ -56,6 +58,19 @@ body {
   justify-content: space-around;
   align-items: center;
   padding: 25;
+}
+
+.Resume,
+.Projects,
+.Interests,
+.Contact {
+  width: 75%;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  padding: 25;
+  margin-top: 50px;
 }
 
 li {
