--- a/style.css
+++ b/style.css
@@ -71,7 +71,8 @@ body {
   justify-content: space-around;
   align-items: center;
   padding: 25;
-  margin-top: 50px;
+  margin-top: 75px;
+  margin-bottom: 75px;
 }
 
 .Experience {
