--- a/style.css
+++ b/style.css
@@ -160,3 +160,38 @@ input[type=submit]:hover {
   padding: 50px;
   margin: 50px;
 }
+
+/* For the BlackJack game in Projects */
+.BlackJackGame {
+  color: white;
+  font-size: 1.25rem;
+  display: flexbox;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 75px;
+}
+
+button {
+  color: white;
+  width: 150px;
+  background: hsla(209, 18%, 54%, 100%);
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-weight: bold;
+  border: none;
+  border-radius: 2px;
+  margin-bottom: 2px;
+  margin-top: 2px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: hsla(203, 28%, 77%, 100%);
+  text-decoration: none;
+  transition: color 300ms linear 80ms;
+}
+button:active {
+  background: white;
+  text-decoration: none;
+}
