--- a/style.css
+++ b/style.css
@@ -21,6 +21,12 @@ nav {
   top: 0;
 }
 
+@media only screen and (max-width: 380px) {
+  nav {
+    width: 75%;
+  }
+}
+
 body {
     color: white;
     font-size: 1.25rem;
@@ -176,6 +182,21 @@ input[type=submit]:hover {
   border-radius: 25px;
   width: 600px;
   height: 350px;
+}
+
+@media only screen and (max-width: 414px) {
+  .BlackJackGame {
+    color: white;
+    background-color: hsla(0,0%,0%, 40%);
+    font-size: 1.25rem;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    margin-top: 90px;
+    border-radius: 25px;
+    width: 75%;
+    height: auto;
+  }
 }
 
 button {
