--- a/style.css
+++ b/style.css
@@ -40,9 +40,9 @@ body {
   background-image: url("https://i.imgur.com/ZBTnkPk.jpg");
   background-repeat: no-repeat;
   background-position: center top;
-  background-size: auto 1255px;
+  background-size: auto 1600px;
   font-size: 2.5rem;
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
