--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
     font-size: 16px;
     font-family: "Roboto", sans-serif;
     margin: 0 auto;
+    padding-bottom: 50px;
 }
 
 /* Navigation Bar */
