--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
     background-color: hsla(203.3,78.8%,16.7%, 100%);
-    background-image: url("https://i.imgur.com/ZSOfjto.jpg");
+    background-image: url("/assets/Background.jpg");
     background-repeat: repeat;
     font-size: 16px;
     font-family: "Roboto", sans-serif;
@@ -37,32 +37,59 @@ body {
     align-items: center;
     }
 
-.MyName {
-  background-image: url("https://i.imgur.com/ZBTnkPk.jpg");
+.Banner {
+  background-image: url("assets/Banner.jpg");
   background-repeat: no-repeat;
-  background-position: center top;
   background-size: auto 1600px;
-  font-size: 2.5rem;
   width: 100vw;
+  height: 100vh;
+  margin: -10px;
+  margin-bottom: -60px;
+}
+
+#MyName,
+.Links {
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 1000;
+  font-size: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 200px;
+}
+
+.Links {
+  background-color: hsla(0,0%,0%, 75%);
+}
+
+#selfie {
+  padding: 25;
+  width: 35%;
+  margin-top: 75px;
+  border-radius: 25px;
+}
+
+.AboutSetup {
+  width: 85%;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
   align-items: center;
-  padding: 60px;
+  padding: 25;
+  margin-top: 50px;
 }
 
-#selfie {
+.CodingJournal {
+  width: 85%;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
+  align-items: center;
   padding: 25;
-  width: 35%;
-  margin-top: 25px;
-  border-radius: 25px;
+  margin-top: 50px;
 }
 
-.AboutSetup,
-.CodingJournal,
 .ProjectList {
   width: 85%;
   display: flex;
