--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 html {
-    background-color: hsla(203.3,78.8%,16.7%, 100%);
-    background-image: url("/assets/Background.jpg");
-    background-repeat: repeat;
-    font-size: 16px;
-    font-family: "Roboto", sans-serif;
-    margin: 0 auto;
-    padding-bottom: 50px;
+  background-image: url("assets/Background.jpg");
+  background-color: hsla(203.3,78.8%,16.7%, 100%);
+  background-repeat: repeat;
+  font-size: 16px;
+  font-family: "Roboto", sans-serif;
+  margin: 0 auto;
+  padding-bottom: 50px;
 }
 
 /* Navigation Bar */
