--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 .Links {
   font-family: 'Times New Roman', Times, serif;
   font-weight: 1000;
-  font-size: 3rem;
+  font-size: 3.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -61,6 +61,20 @@ body {
 
 .Links {
   background-color: hsla(0,0%,0%, 75%);
+}
+
+@media only screen and (max-width: 1275px) {
+  #MyName,
+.Links {
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: 1000;
+  font-size: 1.75rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 200px;
+}
 }
 
 #selfie {
