--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 html {
   background-image: url("assets/Background.jpg");
   background-color: hsla(203.3,78.8%,16.7%, 100%);
-  background-repeat: repeat;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
   margin: 0 auto;
@@ -40,7 +43,9 @@ body {
 .Banner {
   background-image: url("assets/Banner.jpg");
   background-repeat: no-repeat;
-  background-size: auto 1600px;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
   width: 100vw;
   height: 100vh;
   margin: -10px;
