--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ html {
   padding-bottom: 50px;
 }
 
-/* Navigation Bar */
 nav {
   font-size: 1.25rem;
   font-weight: bold;
@@ -176,7 +175,6 @@ li {
   width: 85vw;
 }
 
-/* Footer Section */
 footer {
   font-size: 1.75rem;
   font-weight: bold;
@@ -190,7 +188,7 @@ footer {
   bottom: 0;
 }
 
-/* Link Rules */
+/* Link, Button, and Input Field Rules */
 a:link {
   color: hsla(67.3, 98.4%, 50.8%, 100%);
   text-decoration: none;
