--- a/style.css
+++ b/style.css
@@ -166,11 +166,19 @@ hr {
 }
 
 h1,
+h2,
+h3,
 #title {
   text-align: center;
 }
 
-li {
+h3 {
+  padding-bottom: 25px;
+}
+
+li,
+h2,
+h3 {
   margin-bottom: 15px;
   width: 85vw;
 }
@@ -262,4 +270,9 @@ button:hover {
 button:active {
   background: hsla(163.2, 36.9%, 60.2%, 100%);
   text-decoration: none;
+}
+
+#Tracking {
+  font-size: 15px;
+  font-variant: small-caps;
 }
